<resources>
    <string name="add_alter_attribute_button_text">Add attribute</string>
    <string name="add_alter_button_text">Add</string>
    <string name="add_alter_dialog_title">Add contacts to your network</string>
    <string name="add_alter_contact_event_button_text">Add contact event</string>
    <string name="add_alter_contact_event_headline">Edit contact event</string>
    <string name="add_alter_event_button_text">Add event</string>
    <string name="add_alter_memo_button_text">Add memo</string>
    <string name="add_alter_memo_headline">Compose memo</string>
    <string name="add_attribute_choice_button_text">Add choice</string>
    <string name="add_attribute_value_hint">Enter value</string>
    <string name="add_ego_memo_button_text">Add memo</string>
    <string name="add_ego_memo_headline">Compose memo</string>
    <string name="alter_alter_attribute_type_of_relation_name">Relation</string>
    <string name="alter_alter_attribute_type_of_relation_description">Type of relation between these two contacts. </string>
    <string name="alter_alter_attribute_valuation_name">Like/dislike</string>
    <string name="alter_alter_attribute_valuation_description">Assumed sympathy of these contacts towards each other. </string>
    <string name="alter_attribute_alter_emails_description">email addresses of this contact, separated by comma</string>
    <string name="alter_attribute_alter_email_display_name">email </string>
    <string name="alter_attribute_alter_phone_numbers_description">phone numbers of this contact, separated by comma</string>
    <string name="alter_attribute_alter_phone_numbers_display_name">phone number </string>
    <string name="alter_attribute_alter_photo_id_description">photo id of this contact</string>
    <string name="alter_attribute_alter_photo_uri_description">photo uri of this contact</string>
    <string name="alter_attribute_alter_photo_thumbnail_uri_description">photo thumbnail uri of this contact</string>
    <string name="alter_attribute_alter_system_id_description">id of this contact (from the android device)</string>
    <string name="alter_attribute_city_name">City</string>
    <string name="alter_attribute_city_description">City where this contact (mainly) lives.</string>
    <string name="alter_attribute_gender_name">Gender</string>
    <string name="alter_attribute_gender_description">Gender of this contact. </string>
    <string name="alter_attribute_gender_male">Male</string>
    <string name="alter_attribute_gender_female">Female</string>
    <string name="alter_attribute_occupation_name">Occupation</string>
    <string name="alter_attribute_occupation_description">Main occupation of this contact. </string>
    <string name="alter_attribute_would_help_actively_name">Active support</string>
    <string name="alter_attribute_would_help_actively_description">Whether this contact would support me actively (by investing time and/or effort).</string>
    <string name="alter_attribute_would_help_financially_name">Financial support</string>
    <string name="alter_attribute_would_help_financially_description">Whether this contact would support me financially if needed.</string>
    <string name="alter_attrib_headline">Profile</string>
    <string name="alter_contact_event_atmosphere">Atmosphere</string>
    <string name="alter_contact_event_content">Contact content</string>
    <string name="alter_contact_event_form">Contact form</string>
    <string name="alter_detail_no_alter_selected_hint">no contacts</string>
    <string name="alter_separator_character">|</string>
    <string name="alter_ties_headline">Ties with others</string>
    <string name="app_name">SCC-Preview</string>
    <string name="attrib_detail_no_attrib_selected_hint">&lt;no attribute selected&gt;</string>
    <string name="attribute_description_for_alter_alter_contact">Event between two contacts.</string>
    <string name="attribute_description_for_alter_alter_memos">Written notes about anything concerning the tie between the given contact.</string>
    <string name="attribute_description_for_alter_memos">Written notes about anything concerning the given contact.</string>
    <string name="attribute_description_for_ego_alter_contact">Events between me and a contact.</string>
    <string name="attribute_description_for_ego_display_name">Display name of user profile</string>
    <string name="attribute_description_for_ego_memos">Written notes about anything concerning me.</string>
    <string name="attribute_description_hint">Label description</string>
    <string name="attribute_direction">Direction type:</string>
    <string name="attribute_domain">Domain:</string>
    <string name="attribute_list_alter_alter_attrib_headline">Ties among contacts</string>
    <string name="attribute_list_alter_attrib_headline">Labels of contacts</string>
    <string name="attribute_list_ego_alter_attrib_headline">My ties</string>
    <string name="attribute_list_ego_attrib_headline">My labels</string>
    <string name="attribute_list_headline">All labels</string>
    <string name="attribute_name_hint">Label name (must not be empty)</string>
    <string name="attribute_type">Type:</string>
    <string name="attribute_values_headline">Summary</string>
    <string name="browse_alter_contact_events_headline">Browse contact events</string>
    <string name="browse_alter_memos_headline">Browse memos</string>
    <string name="browse_ego_memos_headline">Browse memos</string>
    <string name="cancel">Cancel</string>
    <string name="chose_alter_alter_operation_button_text">Add event / reverse tie</string>
    <string name="chose_alter_operation_button_text">Delete, rename contact</string>
    <string name="close">Close</string>
    <string name="confirm_remove_alter_dialog_title">Confirm deletion of contact</string>
    <string name="confirm_remove_alter_message_part_1">Do you want to delete the contact</string>
    <string name="confirm_remove_alter_message_part_2">and all associated labels and ties?</string>
    <string name="confirm_remove_attribute_dialog_title">Confirm deletion of label</string>
    <string name="confirm_remove_attribute_message_part_1">Do you want to delete the label</string>
    <string name="confirm_remove_attribute_message_part_2">and all associated values?</string>
    <string name="correctly_imported_interview_toast">Interview imported correctly</string>
    <string name="create_new_alter_alter_label_title">Create new label among contacts</string>
    <string name="create_new_alter_label_title">Create new label for contacts</string>
    <string name="create_new_attribute_button_text">Create new attribute</string>
    <string name="create_new_attribute_desc_hint">Write description (free text)</string>
    <string name="create_new_general_attribute_headline">Create new label</string>
    <string name="create_new_attribute_name_hint">Enter name of new label</string>
    <string name="create_new_ego_alter_label_title">Create new label</string>
    <string name="create_new_ego_label_title">Create new ego label</string>
    <string name="delete_button_text">Delete</string>
    <string name="direction_text_alter_to_ego">contact to me</string>
    <string name="direction_text_asymmetric">asymmetric</string>
    <string name="direction_text_ego_to_alter">me to contact</string>
    <string name="direction_text_first_to_second_alter">forward</string>
    <string name="direction_text_in">in</string>
    <string name="direction_text_out">out</string>
    <string name="direction_text_second_to_first_alter">backward</string>
    <string name="direction_text_symmetric">symmetric</string>
    <string name="edit_alter_alter_tie_labels">Edit labels</string>
    <string name="edit_alter_attrib_button_text">Edit labels</string>
    <string name="edit_alter_attrib_dialog_title"> </string>
    <string name="edit_alter_attrib_dialog_create_new_label">Create new label</string>
    <string name="edit_attrib_ok_button_text">Set values</string>
    <string name="edit_attribute_structure_dialog_title">Restructure label </string>
    <string name="edit_attribute_values_add_value_button_text">Add value </string>
    <string name="edit_attribute_values_assign_value_for">Assign value for </string>
    <string name="edit_attribute_values_assign_value_for_hint">(click on a name) </string>
    <string name="edit_attribute_values_dialog_title">Assign values of label: </string>
    <string name="edit_attribute_values_new_value_choice_hint">Enter new value</string>
    <string name="edit_attribute_values_no_value_assigned_for">No value assigned </string>
    <string name="edit_alter_attrib_structure_ok_button_text">Done</string>
    <string name="edit_alter_ties_button_text">Edit ties</string>
    <string name="edit_alter_ties_dialog_title">Edit ties for: </string>
    <string name="edit_alter_ties_ok_button_text">Done</string>
    <string name="edit_attrib_dialog_add_other_attrib">More labels ...</string>
    <string name="edit_attribute_structure_button_text">Edit attribute structure</string>
    <string name="edit_attribute_values_button_text">Edit attribute values</string>
    <string name="edit_contact_event_text_hint">Additional text info</string>
    <string name="edit_ego_alter_ties_button_text">Edit ties</string>
    <string name="edit_ego_attrib_button_text">Edit labels</string>
    <string name="edit_ego_attrib_dialog_title">My labels </string>
    <string name="edit_memo_text_hint">Memo text </string>
    <string name="ego_alter_attribute_importance_name">Importance</string>
    <string name="ego_alter_ties_headline">Ties with me</string>
    <string name="ego_alter_ties_headline_from_ego_view">Ties with others</string>
    <string name="ego_attrib_headline">My profile</string>
    <string name="expand_alter_alter_ties_button_text">Expand/Collapse</string>
    <string name="expand_alter_attrib_button_text">Expand/Collapse</string>
    <string name="expand_ego_alter_ties_button_text">Expand/Collapse</string>
    <string name="expand_ego_attrib_button_text">Expand/Collapse</string>
    <string name="expand_memos_button_text">Expand/Collapse</string>
    <string name="events_headline">Events / memos </string>
    <string name="goto_survey_button_text">Start/continue survey</string>
    <string name="load_survey_button_text">Load survey</string>
    <string name="memos_headline">Memos </string>
    <string name="menu_add_alter">Add contact</string>
    <string name="menu_export_history_graphml">Export GraphML</string>
    <string name="menu_import_history_graphml">Import GraphML</string>
    <string name="menu_import_int_file">Import Egonet interview</string>
    <string name="menu_history">History view</string>
    <string name="menu_interview">Interview me</string>
    <string name="menu_network_view">Network view</string>
    <string name="menu_statistics_view">Statistics view</string>
    <string name="menu_settings">Settings</string>
    <string name="new_attribute_choice_hint">Enter new value choice (click to remove)</string>
    <string name="search_title">Search</string>
    <string name="select_attribute_type">Select label type: </string>
    <string name="statistics_control_text">Statistics</string>
    <string name="statistics_control_show_gender">Gender statistics</string>
    <string name="statistics_control_show_density">Density statistics</string>
    <string name="statistics_control_show_components">Connected components</string>
    <string name="statistics_control_ideal_case_text">Set ideal case</string>
    <string name="statistics_set_up_ideal_man_hint">Ideal man percentatge</string>
    <string name="statistics_set_up_ideal_woman_hint">Ideal woman percentatge</string>
    <string name="statistics_set_up_button_text">Update ideal case</string>
    <string name="survey_control_headline">Survey:</string>
</resources>