<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="10"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/search_title"/>
    
    <item
        android:id="@+id/menu_add_alter"
        android:icon="@drawable/ic_action_add_alter_img"
        android:orderInCategory="20"
        android:showAsAction="ifRoom"
        android:title="@string/menu_add_alter"/>
    <item
        android:id="@+id/menu_network_view"
        android:icon="@drawable/ic_action_network_view"
        android:orderInCategory="21"
        android:showAsAction="ifRoom"
        android:title="@string/menu_network_view"/>
    <item 
        android:id="@+id/menu_statistics_view"
        android:orderInCategory="22"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_statistics_img"
        android:title="@string/menu_statistics_view"/>
    <item
        android:id="@+id/menu_history"
        android:orderInCategory="30"
        android:showAsAction="never"
        android:title="@string/menu_history"/>
    <item
        android:id="@+id/menu_interview"
        android:orderInCategory="31"
        android:showAsAction="never"
        android:title="@string/menu_interview"/>
    <item
        android:id="@+id/menu_export_history_graphml"
        android:orderInCategory="41"
        android:showAsAction="never"
        android:title="@string/menu_export_history_graphml"/>
    <item
        android:id="@+id/menu_import_history_graphml"
        android:orderInCategory="42"
        android:showAsAction="never"
        android:title="@string/menu_import_history_graphml"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    

</menu>