<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="5sp" >

    <TextView android:id="@+id/statistics_control_headline_textview"
        	  android:layout_width="wrap_content"
        	  android:layout_height="wrap_content"
        	  android:text="@string/statistics_control_text"
        	  android:textSize="16sp"
        	  />
    <Button 
        android:id="@+id/statistics_control_gender_percentage_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_control_show_gender"
        android:onClick="showGenderStatisticsFromStatisticsControl"
        />
    <Button
        android:id="@+id/statistics_control_density_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_control_show_density" 
        android:onClick="showDensityStatisticsFromStatisticsControl"
        />
    <Button
        android:id="@+id/statistics_control_components_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_control_show_components" 
        android:onClick="showComponentsStatisticsFromStatisticsControl"
        />
    <Button
        android:id="@+id/statistics_control_ideal_case_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_control_ideal_case_text"
        android:onClick="showIdealCaseFromStatisticsControl"
        />

</LinearLayout>
