<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView 
        android:text="@string/edit_attribute_structure_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="18sp" 
        android:padding="5sp"/>
    
    <EditText
        android:id="@+id/attribute_name_edit_text"
        android:hint="@string/attribute_name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textStyle="bold"
		android:textColor="#0000C2"
        android:textSize="18sp" 
        android:padding="5sp"/>

    <EditText
        android:id="@+id/attribute_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/attribute_description_hint"
        android:padding="5sp"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp" >

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="10sp"
            android:text="@string/select_attribute_type"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/alter_attribute_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_attribute_choice_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp" >

        <EditText
            android:id="@+id/new_attribute_choice_edit_text"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:hint="@string/new_attribute_choice_hint"
            android:paddingRight="10sp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/add_new_attribute_choice_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_attribute_choice_button_text" />
    </LinearLayout>
    
    <ListView 
        android:id="@+id/attribute_choices_list"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"/>

</LinearLayout>